--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Albaco</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <link href="css/styles.css" rel="stylesheet">
