--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="app.js"></script>
     <script src="js/controllers/main-controllers.js"></script>
     <script src="js/models/main-models.js"></script>
+    <script src="js/directives/main-directives.js"></script>
     <script src="js/gravatar.ui.js"></script>
   </body>
 </html>
