--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js" type="text/javascript" ></script>
+    <script src="bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="bower_components/angular-messages/angular-messages.min.js"></script>
     <script src="bower_components/angular-material/angular-material.min.js"></script>
     <script src="bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script src="bower_components/angular-base64/angular-base64.js"></script>
+    <script src="bower_components/pdfmake/build/pdfmake.js" type="text/javascript"></script>
+    <script src="bower_components/pdfmake/build/vfs_fonts.js" type="text/javascript"></script>
     <!-- Main application js -->
     <script src="app.js"></script>
     <script src="js/controllers/main-controllers.js"></script>
     <script src="js/models/main-models.js"></script>
     <script src="js/directives/main-directives.js"></script>
+    <script src="js/filters/main-filters.js"></script>
     <script src="js/gravatar.ui.js"></script>
   </body>
 </html>
