--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body ng-app="starter" ng-cloak>
+  <body ng-app="starter" layout="column" layout-fill ng-cloak>
     <div ng-view>
       <md-progress-linear md-mode="indeterminate"></md-progress-linear>
     </div>
