--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Albaco POS</title>
+    <title>albaco pos</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
@@ -25,6 +25,7 @@
     <script src="bower_components/angular-base64/angular-base64.js"></script>
     <script src="bower_components/pdfmake/build/pdfmake.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/vfs_fonts.js" type="text/javascript"></script>
+    <script src="bower_components/angular-material-icons/angular-material-icons.min.js" type="text/javascript"></script> 
     <!-- Main application js -->
     <script src="app.js"></script>
     <script src="js/controllers/main-controllers.js"></script>
