--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body ng-app="starter" layout="column" layout-fill ng-cloak>
+  <body ng-app="starter" layout="column" ng-cloak>
     <div ui-view="content"></div>
     <div ng-include=" 'templates/partials/footer.html' "></div>
     <!-- Angular requires next libraries -->
@@ -25,6 +25,7 @@
     <script src="bower_components/pdfmake/build/pdfmake.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/vfs_fonts.js" type="text/javascript"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js" type="text/javascript"></script> 
+    
     <!-- Main application js -->
     <script src="app.js"></script>
     <script src="js/controllers/main-controllers.js"></script>
