--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>albaco pos</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet" >
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+    <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet"> 
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body ng-app="starter" layout="column" ng-cloak>
     <div ui-view="content"></div>
     <div ng-include=" 'templates/partials/footer.html' "></div>
     <!-- Angular requires next libraries -->
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
+    <script src="bower_components/ngkookies/ngKookies.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
-    <script src="bower_components/angular-aria/angular-aria.min.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-    <script src="bower_components/angular-material/angular-material.min.js"></script>
-    <script src="bower_components/angular-gravatar/build/angular-gravatar.js"></script>
-    <script src="bower_components/angular-base64/angular-base64.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-messages/angular-messages.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-material/angular-material.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-gravatar/build/angular-gravatar.js" type="text/javascript"></script>
+    <script src="bower_components/angular-base64/angular-base64.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/pdfmake.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/vfs_fonts.js" type="text/javascript"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js" type="text/javascript"></script> 
@@ -32,6 +32,7 @@
     <script src="js/models/main-models.js"></script>
     <script src="js/directives/main-directives.js"></script>
     <script src="js/filters/main-filters.js"></script>
+    <script src="js/factories/main-factories.js"></script>
     <script src="js/gravatar.ui.js"></script>
   </body>
 </html>
