--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body ng-cloak>
-    <div flex layout="column" layout-fill ng-view></div>
+    <div flex layout="column" layout-fill ng-view>
+      <img class="gears" src="img/loading.gif">
+    </div>
     <!-- Angular requires next libraries -->
     <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-route/angular-route.js" type="text/javascript"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
@@ -21,7 +24,6 @@
     <script src="bower_components/angular-base64/angular-base64.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/pdfmake.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/vfs_fonts.js" type="text/javascript"></script>
-    <script src="bower_components/angular-material-icons/angular-material-icons.min.js" type="text/javascript"></script> 
     
     <!-- Main application js -->
     <script src="app.js"></script>
