--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title ng-bind="'Albaco POS &mdash; ' + title">Albaco POS</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet"> 
+    <link href="bower_components/angular-material/angular-material.min.css" rel="stylesheet" type="text/css"> 
+    <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body ng-cloak>
@@ -24,7 +25,7 @@
     <script src="bower_components/angular-base64/angular-base64.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/pdfmake.js" type="text/javascript"></script>
     <script src="bower_components/pdfmake/build/vfs_fonts.js" type="text/javascript"></script>
-    
+    <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js" type="text/javascript"></script>
     <!-- Main application js -->
     <script src="app.js"></script>
     <script src="js/controllers/main-controllers.js"></script>
